--- a/secure_portal/accounts/templates/login.html
+++ b/secure_portal/accounts/templates/login.html
@@ -1,8 +1,33 @@
-<h2>Login</h2>
-<form method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username" required><br><br>
-    <input type="password" name="password" placeholder="Password" required><br><br>
+{% extends 'base.html' %}
+{% block title %}Login - Secure Portal{% endblock %}
 
-    <button type="submit">Login</button>
-</form>
+{% block content %}
+<div class="auth-container">
+    <div class="card-glass">
+        <div class="page-header">
+            <h2>Login</h2>
+            <p>Access your secure dashboard</p>
+        </div>
+
+        <form method="POST">
+            {% csrf_token %}
+            
+            <div class="form-group">
+                <label for="id_username" class="form-label">Username</label>
+                <input type="text" name="username" id="id_username" class="form-control" placeholder="Enter your username" required>
+            </div>
+
+            <div class="form-group">
+                <label for="id_password" class="form-label">Password</label>
+                <input type="password" name="password" id="id_password" class="form-control" placeholder="Enter your password" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
+
+        <div class="auth-footer">
+            <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+        </div>
+    </div>
+</div>
+{% endblock %}
